cmake_minimum_required(VERSION 3.17)
project(Cpractice C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)  #main为文件mian.c别名,测试时选择别名，然后点绿色播放按键

add_executable(main11 Unit1/test1-1.c)
add_executable(main12 "Unit1/test1-2.c")
add_executable(main13 "Unit1/test1-3.c")

add_executable(main218 "Unit2/test2-18.c")
add_executable(main219 "Unit2/test2-19.c")

add_executable(main31 "Unit3/test3-1.c")
add_executable(main32 "Unit3/test3-2.c")
add_executable(main33 "Unit3/test3-3.c")
add_executable(main34 "Unit3/test3-4.c")
add_executable(main35 "Unit3/test3-5.c")
add_executable(main36 "Unit3/test3-6.c")
add_executable(main38 "Unit3/test3-8.c")
add_executable(main39 "Unit3/test3-9.c")
add_executable(main310 "Unit3/test3-10.c")

add_executable(main41 "Unit4/test4-1.c")
add_executable(main42 "Unit4/test4-2.c")
add_executable(main43 "Unit4/test4-3.c")
add_executable(main44 "Unit4/test4-4.c")
add_executable(main45 "Unit4/test4-5.c")
add_executable(main46 "Unit4/test4-6.c")
add_executable(main47 "Unit4/test4-7.c")
add_executable(main48 "Unit4/test4-8.c")

add_executable(main51 "Unit5/test5-1.c")
add_executable(main52 "Unit5/test5-2.c")
add_executable(main53 "Unit5/test5-3.c")
add_executable(main54 "Unit5/test5-4.c")
add_executable(main55 "Unit5/test5-5.c")
add_executable(main56 "Unit5/test5-6.c")
add_executable(main57 Unit5/test5-7.c)
add_executable(main58 Unit5/test5-8.c)
add_executable(main59 Unit5/test5-9.c)
add_executable(main510 Unit5/test5-10.c)
add_executable(main511 Unit5/test5-11.c)

add_executable(main61 Unit6/test6-1.c)
add_executable(main62 Unit6/test6-2.c)
add_executable(main63 Unit6/test6-3.c)
add_executable(main64 Unit6/test6-4.c)
add_executable(main65 Unit6/test6-5.c)
add_executable(main66 Unit6/test6-6.c)
add_executable(main67 Unit6/test6-7.c)
add_executable(main68 Unit6/test6-8.c)
add_executable(main69 Unit6/test6-9.c)


add_executable(main71 Unit7/test7-1.c)
add_executable(main72 Unit7/test7-2.c)
add_executable(main73 Unit7/test7-3.c)
add_executable(main74 Unit7/test7-4.c)
add_executable(main75 Unit7/test7-5.c)
add_executable(main76 Unit7/test7-6.c)
add_executable(main77 Unit7/test7-7.c)
add_executable(main78 Unit7/test7-8.c)
add_executable(main79 Unit7/test7-9.c)
add_executable(main710 Unit7/test7-10.c)
add_executable(main711 Unit7/test7-11.c)
add_executable(main712 Unit7/test7-12.c)
add_executable(main713 Unit7/test7-13.c)
add_executable(main714 Unit7/test7-14.c)
add_executable(main715 Unit7/test7-15.c)
add_executable(main716 Unit7/test7-16.c)
add_executable(main717 Unit7/test7-17.c)
add_executable(main718 Unit7/test7-18.c)
add_executable(main7191 Unit7/test7-19-1.c Unit7/test7-19-2.c)
add_executable(main7192 Unit7/test7-19-2.c)
add_executable(main7201 Unit7/test7-20-1.c Unit7/test7-20-2.c Unit7/test7-20-3.c Unit7/test7-20-4.c)
add_executable(main7202 Unit7/test7-20-2.c)
add_executable(main7203 Unit7/test7-20-3.c)
add_executable(main7204 Unit7/test7-20-4.c)

add_executable(main81 Unit8/test8-1.c)
add_executable(main82 Unit8/test8-2.c)
add_executable(main83 Unit8/test8-3.c)
add_executable(main84 Unit8/test8-4.c)
add_executable(main85 Unit8/test8-5.c)
add_executable(main86 Unit8/test8-6.c)
add_executable(main87 Unit8/test8-7.c)
add_executable(main88 Unit8/test8-8.c)
add_executable(main89 Unit8/test8-9.c)
add_executable(main810 Unit8/test8-10.c)
add_executable(main811 Unit8/test8-11.c)
add_executable(main812 Unit8/test8-12.c)
add_executable(main813 Unit8/test8-13.c)
add_executable(main814 Unit8/test8-14.c)
add_executable(main815 Unit8/test8-15.c)
add_executable(main816 Unit8/test8-16.c)
add_executable(main817 Unit8/test8-17.c)
add_executable(main818 Unit8/test8-18.c)
add_executable(main819 Unit8/test8-19.c)
add_executable(main820 Unit8/test8-20.c)
add_executable(main821 Unit8/test8-21.c)
add_executable(main822 Unit8/test8-22.c)
add_executable(main823 Unit8/test8-23.c)
add_executable(main824 Unit8/test8-24.c)
add_executable(main825 Unit8/test8-25.c)
add_executable(main826 Unit8/test8-26.c)
add_executable(main827 Unit8/test8-27.c)
add_executable(main828 Unit8/test8-28.c)
add_executable(main829 Unit8/test8-29.c)
add_executable(main830 Unit8/test8-30.c)

add_executable(main91 Unit9/test9-1.c)
add_executable(main92 Unit9/test9-2.c)
add_executable(main93 Unit9/test9-3.c)
add_executable(main94 Unit9/test9-4.c)
add_executable(main95 Unit9/test9-5.c)
add_executable(main96 Unit9/test9-6.c)
add_executable(main97 Unit9/test9-7.c)
add_executable(main98 Unit9/test9-8.c)
add_executable(main99 Unit9/test9-9.c)
add_executable(main910 Unit9/test9-10.c)
add_executable(main911 Unit9/test9-11.c)
add_executable(main912 Unit9/test9-12.c)
add_executable(main913 Unit9/test9-13.c)

add_executable(main101 Unit10/test10-1.c)
add_executable(main102 Unit10/test10-2.c)
add_executable(main103 Unit10/test10-3.c)
add_executable(main104 Unit10/test10-4.c)
add_executable(main105 Unit10/test10-5.c)
add_executable(main106 Unit10/test10-6.c)

add_executable(sort1 sort/1bubbleSort.c)
add_executable(sort2 sort/2selectionSort.c)
add_executable(sort3 sort/3insertSort.c)
add_executable(sort4 sort/4shellSort.c)
add_executable(sort5 sort/5mergeSort.c)
add_executable(sort6 sort/6quickSort.c)
add_executable(sort7 sort/7Heapsort.c)
add_executable(sort8 sort/8countingSort.c)
add_executable(sort9 sort/9bucketSort.c)
add_executable(sort10 sort/10radixSort.c)



